objects/Partner_Portal_Sharing_Matrix__c.object
<CustomObject>
    <description>R8 - Defines Partner Portal allowed sharing access</description>
    <fields>
        <fullName>Country_Area__c</fullName>
        <description>GBSR8</description>
        <globalPicklist>Country</globalPicklist>
        <label>Country Area</label>
        <required>true</required>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Country_and_Sharing_Country__c</fullName>
        <description>This field give information between Country and sharing country, it is being updated with workflow.</description>
        <inlineHelpText>This field give information between Country and sharing country, it is being updated with workflow.</inlineHelpText>
        <label>Country and Sharing Country</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Is_Sharing__c</fullName>
        <defaultValue>false</defaultValue>
        <description>GBSR8</description>
        <label>Is Sharing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Shares_with__c</fullName>
        <description>GBSR8</description>
        <globalPicklist>Country</globalPicklist>
        <label>Shares with</label>
        <required>true</required>
        <type>Picklist</type>
    </fields>
    <label>Partner Portal Sharing Matrix</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Country_Area__c</columns>
        <columns>Shares_with__c</columns>
        <columns>Is_Sharing__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>M-{0000}</displayFormat>
        <label>Matrix Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Partner Portal Sharing Matrix</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>